HVAC Backup 2/objects/Bulk_Upload_Job__c.object
<CustomObject>
    <fields>
        <fullName>Failed_Record_Count__c</fullName>
        <label>Failed Record Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Success_Record_Count__c</fullName>
        <label>Success Record Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Record_Count__c</fullName>
        <label>Total Record Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Product Registration</fullName>
                </value>
                <value>
                    <fullName>Ticket Creation</fullName>
                </value>
                <value>
                    <fullName>Work Order Creation</fullName>
                </value>
                <value>
                    <fullName>Product Transfer Creation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Bulk Upload</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>BUJ-{00000000}</displayFormat>
        <label>Bulk Upload Job Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bulk Upload</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>